--- a/index.html
+++ b/index.html
@@ -48,11 +48,6 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">
-                  About
-                </a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="#schedules">
                   schedules
                 </a>
@@ -69,7 +64,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#sponsors">
-                  Sponsors
+                  Partners
                 </a>
               </li>
               <li class="nav-item">
@@ -92,9 +87,6 @@
             <a class="page-scrool" href="#header-wrap">Home</a>
           </li>
           <li>
-            <a class="page-scrool" href="#about">About</a>
-          </li>
-          <li>
              <a class="page-scroll" href="#schedules">schedules</a>
           </li>
           <li>
@@ -107,7 +99,7 @@
             <a class="page-scroll" href="#faq">Faq</a>
           </li>
           <li>
-            <a class="page-scroll" href="#sponsors">Sponsors</a>
+            <a class="page-scroll" href="#sponsors">Partners</a>
           </li>
           <li>
             <a class="page-scroll" href="#pricing">pricing</a>
