--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="row time-countdown justify-content-center wow fadeInUp" data-wow-delay="0.2s">
               <div id="clock" class="time-count"></div>
             </div>
-            <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Connecting+Voices+Toastmasters+Event&details=More+help+see:+https://support.google.com/calendar/thread/81344786&dates=20240623T090000/20240623T123000&recur=RRULE:FREQ=DAILY;COUNT=1" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a>
+            <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Connecting+Voices+By+Jaipur+Toastmasters+Club&details=More+help+see:+https://support.google.com/calendar/thread/81344786&dates=20240623T090000/20240623T123000&recur=RRULE:FREQ=DAILY;COUNT=1" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a>
           </div>
         </div>
       </div>
@@ -211,7 +211,7 @@
                 <i class="lni-gallery"></i>
               </div>
               <div class="services-content">
-                <h3><a>Meet New Faces</a></h3>
+                <h3><a>Meet 200+ Faces</a></h3>
                 <p>Meet like-minded individuals.Spark future collaborations. </p>
               </div>
             </div>
