--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s">A Life Transformation Event</p>
               <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Connecting Voices</h1>
-              <a class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
+              <a href="https://pages.razorpay.com/pl_OFurhiJxSufapF/view" target="_blank" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -134,7 +134,7 @@
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s">Network | Engage | Connect | Knowledge</p>
               <h1 class="wow bounceIn heading" data-wow-delay=".7s">Amazing Speakers</h1>
-              <a class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
+              <a href="https://pages.razorpay.com/pl_OFurhiJxSufapF/view" target="_blank"  class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -142,7 +142,7 @@
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s">In Your Pink City</p>
               <h1 class="wow fadeInUp heading" data-wow-delay=".6s">Book Your Seat Now!</h1>
-              <a class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
+              <a  href="https://pages.razorpay.com/pl_OFurhiJxSufapF/view" target="_blank"  class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
             </div>
           </div>
         </div>
@@ -223,8 +223,8 @@
                 <i class="lni-envelope"></i>
               </div>
               <div class="services-content">
-                <h3><a>Leadership Insights</a></h3>
-                <p>Bridge the Gap: Walk in the Footsteps of Leaders, Become One Yourself.</p>
+                <h3><a>Connect & Network</a></h3>
+                <p>It's Not Who You Know, It's Who You Connect With.</p>
               </div>
             </div>
           </div>
@@ -236,7 +236,7 @@
                 <i class="lni-bubble"></i>
               </div>
               <div class="services-content">
-                <h3><a>Expert Voices</a></h3>
+                <h3><a>Distinguished Speakers</a></h3>
                 <p>Master the Art of Words. Hear from Expert Communicators.</p>
               </div>
             </div>
@@ -260,8 +260,8 @@
                 <i class="lni-user"></i>
               </div>
               <div class="services-content">
-                <h3><a>Mega Event</a></h3>
-                <p>The Leadership & Communication Event You Can't Miss.</p>
+                <h3><a>Entertainment</a></h3>
+                <p>Standup | Singing | Dancing | Lot's of fun</p>
               </div>
             </div>
           </div>
@@ -350,7 +350,7 @@
           <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
             <div class="counter wow fadeInRight" data-wow-delay="1.2s">
               <div class="icon"><i class="lni-coffee-cup"></i></div>
-              <p>Free Lunch & Snacks</p>
+              <p>Free Snacks</p>
               <span>Don't miss it</span>
             </div>
           </div>
@@ -383,7 +383,7 @@
                         </div>                     
                         <span class="time">9:00am - 9:30pm</span>
                         <h4>Open Networking</h4>
-                        <h5 class="name">Network with teh creame of Jaipur</h5>
+                        <h5 class="name">Network with the creame of Jaipur</h5>
                       </div>
                     </div>
                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
@@ -687,33 +687,10 @@
                   </div>
                 </div>
               </div>
-              <div class="card">
-                <div class="card-header" id="headingThree">
-                  <div class="header-title" data-toggle="collapse" data-target="#questionFour" aria-expanded="false" aria-controls="questionFour">
-                   <i class="lni-pencil"></i> Who can join at the live event venue?
-                  </div>
-                </div>
-                <div id="questionFour" class="collapse" aria-labelledby="headingThree" data-parent="#question">
-                  <div class="card-body">
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
             <div class="accordion">
-              <div class="card">
-                <div class="card-header" id="headingOne2">
-                  <div class="header-title" data-toggle="collapse" data-target="#questionOne2" aria-expanded="true" aria-controls="collapseOne">
-                    <i class="lni-pencil"></i> What is included in the registration fee? 
-                  </div>
-                </div>
-                <div id="questionOne2" class="collapse" aria-labelledby="headingOne" data-parent="#question">
-                  <div class="card-body">
-                    
-                  </div>
-                </div>
-              </div>
               <div class="card">
                 <div class="card-header" id="headingTwo2">
                     <div class="header-title" data-toggle="collapse" data-target="#questionTwo2" aria-expanded="false" aria-controls="questionTwo">
@@ -756,7 +733,7 @@
     </section>
     <!-- Ask Question Section End -->
 
-    <!-- Sponsors Section Start -->
+    <!-- 
     <section id="sponsors" class="section-padding">
       <div class="container">
         <div class="row">
@@ -794,7 +771,7 @@
         </div>
       </div>
     </section>
-    <!-- Sponsors Section End -->
+     -->
 
     <!-- Ticket Pricing Area Start -->
     <section id="pricing" class="section-padding">
@@ -825,13 +802,13 @@
                 <ul>
                   <li><i class="lni-check-mark-circle"></i><span class="text">Registration</span></li>
                   <li><i class="lni-check-mark-circle"></i><span class="text">Speaker Sessions</span></li>
-                  <li><i class="lni-check-mark-circle"></i><span class="text">Snacks/Lunch</span></li>
+                  <li><i class="lni-check-mark-circle"></i><span class="text">Snacks</span></li>
                   <li><i class="lni-check-mark-circle"></i><span class="text">Access to all areas</span></li>
                   <li><i class="lni-check-mark-circle"></i><span class="text">Table Topic Sessions</span></li>
-                  <li><i class="lni-check-mark-circle"></i><span class="text">Activites</span></li>
+                  <li><i class="lni-check-mark-circle"></i><span class="text">Fun Activites</span></li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-common">Buy Ticket</a>
+              <a href="https://pages.razorpay.com/pl_OFurhiJxSufapF/view" target="_blank" class="btn btn-common">Buy Ticket</a>
             </div>
           </div>
          
@@ -844,19 +821,19 @@
                 <h5>Guest Pass</h5>
               </div>
               <div class="price">
-                <h2>₹ 399</h2>
+                <h2>₹ <s>399</s> 299</h2>
               </div>
               <div class="pricing-list">
                 <ul>
                   <li><i class="lni-check-mark-circle"></i><span class="text">Registration</span></li>
                   <li><i class="lni-check-mark-circle"></i><span class="text">Speaker Sessions</span></li>
-                  <li><i class="lni-check-mark-circle"></i><span class="text">Snacks/Lunch</span></li>
+                  <li><i class="lni-check-mark-circle"></i><span class="text">Snacks</span></li>
                   <li><i class="lni-check-mark-circle"></i><span class="text">Access to all areas</span></li>
                   <li><i class="lni-check-mark-circle"></i><span class="text">Table Topic Sessions</span></li>
-                  <li><i class="lni-check-mark-circle"></i><span class="text">Activites</span></li>
+                  <li><i class="lni-check-mark-circle"></i><span class="text">Fun Activites</span></li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-common">Buy Ticket</a>
+              <a href="https://pages.razorpay.com/pl_OFurhiJxSufapF/view" target="_blank" class="btn btn-common">Buy Ticket</a>
             </div>
           </div>
         </div>
@@ -901,7 +878,7 @@
 </div>
 </section>
 
-
+<!--
 <section id="contact-map" class="section-padding">
 <div class="container">
 <div class="row justify-content-center">
@@ -951,7 +928,7 @@
 </div>
 </div>
 </section>
-
+-->
     <!-- Footer Section Start -->
     <footer class="footer-area section-padding">
       <div class="container">
@@ -970,26 +947,29 @@
             </ul>
           </div>
           <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.6s">
-            <h3>RECENT POSTS</h3>
+            <h3>Contact Info</h3>
             <p>
-              Aorem ipsum dolor sit amet elit sed lum tempor incididunt ut labore el dolore alg minim veniam quis nostrud ncididunt.
+            TM KAMLESH JESWANI - 9461472723
+            </p>
+            <BR/>
+            <p>
+            TM SUKHDEEP SINGH - 8094811058
             </p>
           </div>
           <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.8s">
             <h3>Jaipur Toastmasters Club</h3>
             <div class="widget">
               <p>
-              Aorem ipsum dolor sit amet elit sed lum tempor incididunt ut labore el dolore alg minim veniam quis nostrud ncididunt.
+              Address: 306, 3rd Floor, Sangam Tower, 190, Church Rd, Hathroi, Jaipur, Rajasthan 302001
             </p>
             </div>
             <!-- /.widget -->
             <div class="widget">
               <h5 class="widget-title">FOLLOW US ON</h5>
               <ul class="footer-social">
-                <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li><a class="twitter" href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li><a class="linkedin" href="#"><i class="lni-linkedin-filled"></i></a></li>
-                <li><a class="google-plus" href="#"><i class="lni-google-plus"></i></a></li>
+                <li><a target="_blank" class="facebook" href="https://www.facebook.com/Jaipur.Toastmasters.Club"><i class="lni-facebook-filled"></i></a></li>
+                <li><a target="_blank" class="linkedin" href="https://www.linkedin.com/company/jaipur-toastmasters-club"><i class="lni-linkedin-filled"></i></a></li>
+                <li><a target="_blank" class="instagram" href="https://www.instagram.com/jaipurtoastmastersclub_22"><i class="lni-instagram-filled"></i></a></li>
               </ul>
             </div>
           </div>
