--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#schedules">
-                  schedules
+                  Schedules
                 </a>
               </li>
               <li class="nav-item">
@@ -59,12 +59,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#faq">
-                  Faq
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#sponsors">
-                  Partners
+                  FAQ
                 </a>
               </li>
               <li class="nav-item">
@@ -87,19 +82,13 @@
             <a class="page-scrool" href="#header-wrap">Home</a>
           </li>
           <li>
-             <a class="page-scroll" href="#schedules">schedules</a>
+             <a class="page-scroll" href="#schedules">Schedules</a>
           </li>
           <li>
             <a class="page-scroll" href="#speakers">Speakers</a>
           </li>
           <li>
-            <a class="page-scroll" href="#gallery">Gallery</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#faq">Faq</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#sponsors">Partners</a>
+            <a class="page-scroll" href="#faq">FAQ</a>
           </li>
           <li>
             <a class="page-scroll" href="#pricing">pricing</a>
@@ -398,17 +387,14 @@
                         <div class="images-box">
                           <img class="img-fluid" src="assets/img/speaker/speakers-2.jpg" alt="">
                         </div>                     
-                        <span class="time">10am - 12:30pm</span>
-                        <h4>15 Free Productive Design Tools</h4>
-                        <h5 class="name">David Warner</h5>
+                        <span class="time">9:30am - 10:00am</span>
+                        <h4>KEYNOTE SESSION</h4>
+                        <h5 class="name">By a Distinguished Toastmaster</h5>
                       </div>
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                       <div class="card-body">
-                        <p>Consectetur adipisicing elit. Quod distinctio impedit sint accusantium ducimus lites consequuntur innobisl dolores saepe.Proin sit amet turpis lobortis.</p>
-                        <div class="location">
-                          <span>Location:</span> Hall 1 , Building A, Golden Street, Southafrica
-                        </div>
+                        <p>A leader who learns by doing is coming to share his skills and experience in the world of Leadership and Communication</p>
                       </div>
                     </div>
                   </div>
@@ -419,16 +405,13 @@
                           <img class="img-fluid" src="assets/img/speaker/speakers-3.jpg" alt="">
                         </div>                     
                         <span class="time">10am - 12:30pm</span>
-                        <h4>Getting Started With SketchApp</h4>
-                        <h5 class="name">David Warner</h5>
+                        <h4>WORLD CLASS SPEECHES + IMPROMPTU SPEAKING SESSION</h4>
+                        <h5 class="name">Listen to world class speeches and get to observe a level at which International Speeches are delivered</h5>
                       </div>
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                       <div class="card-body">
-                        <p>Consectetur adipisicing elit. Quod distinctio impedit sint accusantium ducimus lites consequuntur innobisl dolores saepe.Proin sit amet turpis lobortis.</p>
-                        <div class="location">
-                          <span>Location:</span> Hall 1 , Building A, Golden Street, Southafrica
-                        </div>
+                        <p>Get a chance to participate in an Impromptu Speaking Session to shed stage fear and convert it into a public speaking opportunity</p>
                       </div>
                     </div>
                   </div>
@@ -496,7 +479,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.2s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-01.jpeg" alt="">
+                <img class="img-fluid" src="assets/img/team/comingsoon.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -509,8 +492,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Lokendra Singh</a></h3>
-                <p>President, JTC</p>
+                <h3><a href="#">Revealing Soon</a></h3>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -519,7 +501,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.4s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-02.jpeg" alt="">
+                <img class="img-fluid" src="assets/img/team/comingsoon.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -532,8 +514,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Medha Chaturvedi</a></h3>
-                <p>Upcoming President, JTC</p>
+                <h3><a href="#">Revealing Soon</a></h3>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -543,7 +524,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.6s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-03.jpeg" alt="">
+                <img class="img-fluid" src="assets/img/team/comingsoon.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -556,8 +537,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Sukhdeep Singh</a></h3>
-                <p>Power House, JTC</p>
+                <h3><a href="#">Revealing Soon</a></h3>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -567,7 +547,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.8s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-04.jpeg" alt="">
+                <img class="img-fluid" src="assets/img/team/comingsoon.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -580,8 +560,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Naman Bhutra</a></h3>
-                <p>King of Sustainable timber harvesting</p>
+                <h3><a href="#">Revealing Soon</a></h3>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -590,7 +569,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="1s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-05.jpeg" alt="">
+                <img class="img-fluid" src="assets/img/team/comingsoon.jpg" alt="">
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -603,8 +582,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Yash Papriwal</a></h3>
-                <p>Don of JTC</p>
+                <h3><a href="#">Revealing Soon</a></h3>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -613,21 +591,21 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team-06.jpeg" alt="">
-                <div class="team-overlay">
+                <img class="img-fluid" src="assets/img/team/comingsoon.jpg" alt="">
+                  <!--<div class="team-overlay">
                   <div class="overlay-social-icon text-center">
-                    <ul class="social-icons">
+                   <ul class="social-icons">
                       <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
-                    </ul>
+                    </ul> 
                   </div>
-                </div>
+                </div>-->
               </div>
               <div class="info-text">
-                <h3><a href="#">Palak Gupta</a></h3>
-                <p>Our Sergeant of Arms</p>
+                <h3><a href="#">Revealing Soon</a></h3>
+               <!-- <p>Our Sergeant of Arms</p>-->
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -939,11 +917,10 @@
           <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.4s">
             <h3>QUICK LINKS</h3>
             <ul>
-              <li><a href="#about">About Event</a></li>
-              <li><a href="#team">Our Speakers</a></li>
+              <li><a href="#teaspeakersm">Our Speakers</a></li>
               <li><a href="#schedules">Event Shedule</a></li>
-              <li><a href="#">Latest News</a></li>
-              <li><a href="#">Event Photo Gallery</a></li>
+              <li><a href="#faq">FAQ</a></li>
+              <li><a href="#pricing">Pricing</a></li>
             </ul>
           </div>
           <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.6s">
