--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s">A Life Transformation Event</p>
               <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Connecting Voices</h1>
-              <a href="https://pages.razorpay.com/pl_OFurhiJxSufapF/view" target="_blank" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
+              <a href="https://rzp.io/l/gvxnkeSd" target="_blank" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -123,7 +123,7 @@
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s">Network | Engage | Connect | Knowledge</p>
               <h1 class="wow bounceIn heading" data-wow-delay=".7s">Amazing Speakers</h1>
-              <a href="https://pages.razorpay.com/pl_OFurhiJxSufapF/view" target="_blank"  class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
+              <a href="https://rzp.io/l/gvxnkeSd" target="_blank"  class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -131,7 +131,7 @@
             <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s">In Your Pink City</p>
               <h1 class="wow fadeInUp heading" data-wow-delay=".6s">Book Your Seat Now!</h1>
-              <a  href="https://pages.razorpay.com/pl_OFurhiJxSufapF/view" target="_blank"  class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
+              <a  href="https://rzp.io/l/gvxnkeSd" target="_blank"  class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Get Ticket</a>
             </div>
           </div>
         </div>
@@ -162,7 +162,7 @@
             <div class="row time-countdown justify-content-center wow fadeInUp" data-wow-delay="0.2s">
               <div id="clock" class="time-count"></div>
             </div>
-            <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Connecting+Voices+By+Jaipur+Toastmasters+Club&details=More+help+see:+https://support.google.com/calendar/thread/81344786&dates=20240623T090000/20240623T123000&recur=RRULE:FREQ=DAILY;COUNT=1" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a>
+            <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Connecting+Voices+By+Jaipur+Toastmasters+Club&details=More+help+see:+https://support.google.com/calendar/thread/81344786&dates=20240623T090000/20240623T130000&recur=RRULE:FREQ=DAILY;COUNT=1" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a>
           </div>
         </div>
       </div>
@@ -312,7 +312,7 @@
       <div class="container">
         <div class="row">
           <!-- Counter Item -->
-          <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
+          <div class="col-md-6 col-lg-4 col-xs-12 work-counter-widget text-center">
             <div class="counter wow fadeInRight" data-wow-delay="0.3s">
               <div class="icon"><i class="lni-map"></i></div>
               <p>Rajasthan International Center</p>
@@ -320,7 +320,7 @@
             </div>
           </div>
           <!-- Counter Item -->
-          <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
+          <div class="col-md-6 col-lg-4 col-xs-12 work-counter-widget text-center">
             <div class="counter wow fadeInRight" data-wow-delay="0.6s">
               <div class="icon"><i class="lni-timer"></i></div>
               <p>June 23 2024</p>
@@ -328,21 +328,21 @@
             </div>
           </div>
           <!-- Counter Item -->
-          <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
+          <div class="col-md-6 col-lg-4 col-xs-12 work-counter-widget text-center">
             <div class="counter wow fadeInRight" data-wow-delay="0.9s">
               <div class="icon"><i class="lni-users"></i></div>
-              <p>180 Available Seats Remaining</p>       
+              <p>122 Available Seats Remaining</p>       
               <span>Hurryup! few tickets are left</span>
             </div>
           </div>
-          <!-- Counter Item -->
+          <!-- Counter Item 
           <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
             <div class="counter wow fadeInRight" data-wow-delay="1.2s">
               <div class="icon"><i class="lni-coffee-cup"></i></div>
               <p>Free Snacks</p>
               <span>Don't miss it</span>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -389,7 +389,7 @@
                         </div>                     
                         <span class="time">9:30am - 10:00am</span>
                         <h4>KEYNOTE SESSION</h4>
-                        <h5 class="name">By a Distinguished Toastmaster</h5>
+                        <h5 class="name">By a Certified Public Speaker</h5>
                       </div>
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
@@ -415,14 +415,13 @@
                       </div>
                     </div>
                   </div>
-                  <!--
                   <div class="card">
                     <div id="headingFour">
                       <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                         <div class="images-box">
-                          <img class="img-fluid" src="assets/img/speaker/speakers-3.jpg" alt="">
+                          <img class="img-fluid" src="assets/img/speaker/speaker-1.png" alt="">
                         </div>                     
-                        <span class="time">9:00am - 9:30pm</span>
+                        <span class="time">12:30pm - 1:00pm</span>
                         <h4>Open Networking</h4>
                         <h5 class="name">Network with teh creame of Jaipur</h5>
                       </div>
@@ -433,6 +432,7 @@
                       </div>
                     </div>
                   </div>
+                  <!--
                   <div class="card">
                     <div id="headingFive">
                       <div class="collapsed card-header" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
@@ -774,7 +774,7 @@
                   <li><i class="lni-check-mark-circle"></i><span class="text">Fun Activites</span></li>
                 </ul>
               </div>
-              <a href="https://pages.razorpay.com/pl_OFurhiJxSufapF/view" target="_blank" class="btn btn-common">Buy Ticket</a>
+              <a href="https://rzp.io/l/gvxnkeSd" target="_blank" class="btn btn-common">Buy Ticket</a>
             </div>
           </div>
          
@@ -799,7 +799,7 @@
                   <li><i class="lni-check-mark-circle"></i><span class="text">Fun Activites</span></li>
                 </ul>
               </div>
-              <a href="https://pages.razorpay.com/pl_OFurhiJxSufapF/view" target="_blank" class="btn btn-common">Buy Ticket</a>
+              <a href="https://rzp.io/l/gvxnkeSd" target="_blank" class="btn btn-common">Buy Ticket</a>
             </div>
           </div>
         </div>
